[NEW UPDATE] creating and getting the api

--- a/index.html
+++ b/index.html
@@ -22,11 +22,23 @@
                     <label for="body">content</label>
                     <textarea class="form-control" id="body-value"></textarea>
                 </div>
-                <botton type="submit" class="btn btn-primary">POST</botton>
+                <botton type="submit" class="btn btn-primary" style="margin-top:20px; margin-bottom:20px">POST</botton>
             </form>
         </div>
     </div>
+    <div class="posts-list row">
+          <div class="card mt-4 col-md-6 bg-ligt">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Edit</a>
+              <a href="#" class="card-link">Delete</a>
+            </div>
+          </div>
+    </div>
    </div> 
 </body>
+<script src="index.js"></script>
 <script src="js/bootstrap.js"></script>
 </html>
